--- a/TestMachine.lpi
+++ b/TestMachine.lpi
@@ -130,7 +130,7 @@
         <IsPartOfProject Value="True"/>
       </Unit3>
       <Unit4>
-        <Filename Value="APIHttp.pas"/>
+        <Filename Value="UltraHttp.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit4>
     </Units>
